Wed Sep 10 10:48:04 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_gc.rb: catch up last fix.

Wed Sep 10 10:36:08 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (objspace_total_slot): rename objspace_available_slots.

	* gc.c (objspace_live_slot, objspace_free_slot): rename
	  ..._slot() to ..._slots().

	* gc.c (objspace_free_slot): should subtract heap_pages_final_slots.

	* gc.c (gc_stat_internal):
	  * add `heap_available_slots' field
	  * rename heap_live_slot to heap_live_slots
	  * rename heap_free_slot to heap_free_slots
	  ref: [Feature #9924]

Wed Sep 10 07:22:53 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: refactoring for RGENGC_PROFILE > 0.

	  * rename rb_objspace_t::profile::..._count
	    to rb_objspace_t::profile::total_..._count
	  * rename promote_infant_types to promote_types

	* gc.c (gc_remember_unprotected): count remembered shady objects here.

Wed Sep 10 03:12:12 2014  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* gc.c (init_mark_stack): MEMZERO() receive type as 2nd argument instead
	  of size.
	  Coverity Scan found this bug.

Tue Sep  9 21:55:39 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/sample/excel2.rb: remove some commented-out code.
	  rotate graph more slowly to see graph clearly.

Tue Sep  9 19:52:33 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename rb_objspace_t::marked_objects to marked_slots.

	* gc.c (gc_marks_start): should be clear first.

	* gc.c (gc_marks_start): remembered shady objects are also marked.

	* gc.c (gc_stat_internal): add heap_marked_slots.

Tue Sep  9 18:58:48 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename
	  * total_allocated_object_num -> total_allocated_objects
	  * total_allocated_object_num_at_gc_start -> total_allocated_objects_at_gc_start
	  * total_freed_object_num -> total_freed_objects

	* gc.c (gc_stat_internal): 
	  * rename total_allocated_object -> total_allocated_objects
	  * rename total_freed_object -> total_freed_objects
