@@ -1,3 +1,10 @@
+Wed Sep 10 11:12:25 2014  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (gc_stat_internal): support:
+	  * total_allocated_pages
+	  * total_freed_pages
+	  ref: [Feature #9924]
+
 Wed Sep 10 10:48:04 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* test/ruby/test_gc.rb: catch up last fix.
